<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:src="@mipmap/kamoi_head"></ImageView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/nav_header_text_size"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/nav_header_text_size"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/nav_header_text_size"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

</LinearLayout>