<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:padding="10dp"
    android:background="@color/chatbox_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_title"
        android:text="@string/settings_title"
        android:textColor="@color/user_color"
        android:textSize="@dimen/settings_title_size"
        android:layout_marginBottom="@dimen/settings_line_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/chat_name"
        android:paddingLeft="10dp"
        android:layout_marginBottom="@dimen/settings_line_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chat_name_header"
            android:text="@string/chat_name_header"
            android:textColor="@color/user_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:text="@string/chat_name_content"
            android:textColor="@color/mess_color"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:paddingLeft="10dp"
        android:layout_marginBottom="@dimen/settings_line_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enter_password"
            android:text="@string/enter_password"
            android:textColor="@color/user_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:textColor="@color/mess_color"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/re_password"
        android:paddingLeft="10dp"
        android:layout_marginBottom="@dimen/settings_line_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enter_password2"
            android:text="@string/reenter_password"
            android:textColor="@color/user_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:textColor="@color/mess_color"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_gravity="left"
        android:background="@color/colorWhite"
        android:text="Confirm" />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/mess_color"
        android:text="Use_Light_Theme" />

</LinearLayout>