<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatbox"
    android:layout_width="match_parent"
    android:background="@color/chatbox_background"
    android:layout_height="match_parent"
    tools:context=".chatbox">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/get_messenges"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/messages"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user"
                android:text="User 1"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess"
                android:text="@string/testmess"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages2"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user2"
                android:text="User 2"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess2"
                android:text="@string/testmess2"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages3"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user3"
                android:text="User 3"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess3"
                android:text="@string/testmess3"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages4"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user4"
                android:text="User 4"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess4"
                android:text="@string/testmess4"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages5"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user5"
                android:text="User 5"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess5"
                android:text="@string/testmess5"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages6"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user6"
                android:text="User 6"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess6"
                android:text="@string/testmess6"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages7"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user7"
                android:text="User 7"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess7"
                android:text="@string/testmess7"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages8"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user8"
                android:text="User 8"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess8"
                android:text="@string/testmess8"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages9"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user9"
                android:text="User 9"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess9"
                android:text="@string/testmess9"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages10"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user10"
                android:text="User 10"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess10"
                android:text="@string/testmess10"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages11"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user11"
                android:text="User 11"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess11"
                android:text="@string/testmess11"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messages12"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user12"
                android:text="User 12"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/user_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/mess12"
                android:text="@string/testmess12"
                android:textSize="@dimen/chat_text_size"
                android:textAlignment="viewStart"
                android:textColor="@color/mess_color"
                android:typeface="monospace"
                android:lineSpacingExtra="1dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start" />

        </LinearLayout>


    </LinearLayout>



</ScrollView>